--- a/index.html
+++ b/index.html
@@ -9,8 +9,54 @@
 </head>
 
 <body>
-  Hello world
+  
   <script src="script.js"></script>
 </body>
 
 </html>
+
+<img src="https://static.itdg.com.br/images/360-240/e3bde312e7e27c8f8b3982c74ba4819c/318292-original.jpg" alt="imagem bolo">
+<h1>RECEITA BOLO DE CHOCOLATE<h1>
+
+  <h2>INGREDIENTES</h2>
+
+<h3>MASSA</h3>
+  <p>4 ovos<p>
+  </p>4 colheres (sopa) de chocolate em pó<p></p>
+  <p></p>2 colheres (sopa) de manteiga<p></p>
+  <p></p>3 xícaras (chá) de farinha de trigo<p></p>
+  <p></p>2 xícaras (chá) de açúcar<p></p>
+  <p></p> 2 colheres (sopa) de fermento<p></p>
+  <p></p>1 xícara (chá) de leite<p></p>
+
+<h3>CALDA</h3>
+
+
+<p></p>2 colheres (sopa) de manteiga<p></p>
+<p>7 colheres (sopa) de chocolate em pó<p></p>
+<p></p>2 latas de creme de leite com soro<p></p>
+ <p></p>3 colheres (sopa) de açúcar<p></p>
+
+<h4>UTENCILIOS</h4>
+
+<p>liquidificador<p>
+<p>panela<p>
+<p>forma de bolo<p>
+<p>colher de pau<p>
+
+ <h4>MODO DE PREPARO</h4>
+
+  <h2>massa</h2>
+    
+  <p>1 Em um liquidificador adicione os ovos, o chocolate em pó, a manteiga, a farinha de trigo, o açúcar e o leite, depois bata por 5 minutos.</p>
+
+  <p>2 Adicione o fermento e misture com uma espátula delicadamente.</p>
+
+  <p>3 Em uma forma untada, despeje a massa e asse em forno médio (180 ºC) preaquecido por cerca de 40 minutos. Não se esqueça de usar uma forma alta para essa receita: como leva duas colheres de fermento, ela cresce bastante! Outra solução pode ser colocar apenas uma colher de fermento e manter a sua receita em uma forma pequena.</p>
+
+ <h2>calda</h2>
+  <p>1 Em uma panela, aqueça a manteiga e misture o chocolate em pó até que esteja homogêneo.</p>
+
+  <p>2 Acrescente o creme de leite e misture bem até obter uma consistência cremosa.</p>
+
+  <p>3 Desligue o fogo e acrescente o açúcar.</p>
